--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -10,20 +10,31 @@
 <div class="container">
 
     <div class="row">
+        <div class="col-md-6 col-md-offset-3 text-center">
 
+            <div th:if="${param.error}" class="alert alert-danger alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">x</span>
+                </button>
+                <p th:text="#{login.error.message}" />
+            </div>
+            <div th:if="${param.logout}" class="alert alert-success alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">x</span>
+                </button>
+                <p th:text="#{login.logout.success}" />
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col-md-6 col-md-offset-3">
-
             <div class="well">
-
                 <div class="text-center">
-
                     <h1 th:text="#{login.h1.text}" />
                     <p class="lead" th:text="#{login.p.lead}" />
-
                 </div>
-
                 <div class="text-left">
-
                     <form id="loginForm"
                           th:action="@{/login}"
                           method="post">
@@ -41,16 +52,11 @@
                         <div class="form-group">
                             <button type="submit" th:text="#{navbar.login.text}" class="btn btn-primary" />
                         </div>
-
                     </form>
                 </div>
-
             </div>
-
         </div>
-
     </div>
-
 </div>
 
 <!-- Bootstrap core JavaScript
